Add timeout for CI verification
Signed-off-by: Binbin Lv <binbin.lv@zilliz.com>

--- a/.github/workflows/CI_milvus1x_milvus2x_main.yaml
+++ b/.github/workflows/CI_milvus1x_milvus2x_main.yaml
@@ -97,6 +97,7 @@ jobs:
           pip install -r requirements.txt
 
       - name: Verify data
+        timeout-minutes: 5
         shell: bash
         run: |
           python testfiles/testcases/verify_data_milvus1x.py
